// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card and CardStack Model adds a card to the CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Neutral",
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "1",
      "isPlayed": false,
      "name": "Card 1",
      "subcategories": Array [],
      "uniqid": "1",
    },
    Object {
      "category": "Neutral",
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "2",
      "isPlayed": false,
      "name": "Card 2",
      "subcategories": Array [],
      "uniqid": "2",
    },
  ],
}
`;

exports[`Card and CardStack Model creates a Card 1`] = `
Object {
  "category": "Neutral",
  "cost": Object {
    "kind": "Money",
    "value": 0,
  },
  "description": "",
  "effects": Array [],
  "id": "1",
  "isPlayed": false,
  "name": "Card 1",
  "subcategories": Array [],
  "uniqid": "1",
}
`;

exports[`Card and CardStack Model creates a CardStack 1`] = `
Object {
  "cards": Array [
    Object {
      "category": "Neutral",
      "cost": Object {
        "kind": "Money",
        "value": 0,
      },
      "description": "",
      "effects": Array [],
      "id": "1",
      "isPlayed": false,
      "name": "Card 1",
      "subcategories": Array [],
      "uniqid": "1",
    },
  ],
}
`;

exports[`Card and CardStack Model removes a card from the CardStack 1`] = `
Object {
  "cards": Array [],
}
`;
